Fix wide layout alignment on desktop

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -549,10 +549,13 @@ body {
   .page {
     @include breakpoint($large) {
       padding-right: 0;
+      width: 100%;
+      float: none;
     }
 
     @include breakpoint($x-large) {
       padding-right: 0;
+      width: 100%;
     }
   }
 
